--- a/authorization_code/public/host.html
+++ b/authorization_code/public/host.html
@@ -1,13 +1,11 @@
 <!doctype html>
 <html>
   <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-  <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-  <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-
-</head>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+  </head>
   <body id="wrapper">
     <form action="/platform">
       Event Name:<br>
@@ -19,12 +17,14 @@
       Event Type:<br>
       <input type="text" name="eventtype" required>
       Event Genres:<br>
-      <input type="checkbox" name="genres" id="rock" value="rock"><label for="rock">Rock</label>
-      <input type="checkbox" name="genres" id="hip-hop" value="hip-hop"> <label for="hip-hop">hip-hop</label>
-      <input type="checkbox" name="genres" id="R&B" value="R&B"> <label for="R&B">R and B</label>
-      <input type="checkbox" name="genres" id="Pop" value="Pop"> <label for="Pop">Pop</label>
-      <input type="checkbox" name="genres" id="Country" value="Country"> <label for="Country">Country</label>
-      <input type="checkbox" name="genres" id="EDM" value="EDM"> <label for="EDM">EDM</label>
+      <input type="checkbox" name="genres" id="rap" value="rap"><label for="rap">Rap</label>
+      <input type="checkbox" name="genres" id="hip hop" value="hip hop"> <label for="hip hop">Hip Hop</label>
+      <input type="checkbox" name="genres" id="r&b" value="r&b"> <label for="r&b">R and B</label>
+      <input type="checkbox" name="genres" id="pop" value="pop"> <label for="pop">Pop</label>
+      <input type="checkbox" name="genres" id="rock" value="rock"> <label for="rock">Rock</label>
+      <input type="checkbox" name="genres" id="country" value="country"> <label for="country">Country</label>
+      <input type="checkbox" name="genres" id="edm" value="edm"> <label for="edm">EDM</label>
+      <input type="checkbox" name="genres" id="trap music" value="trap music"> <label for="trap music">Trap Music</label>
       Event Code:<br>
       <input type="text" name="eventcode" required>
       <button name="submit" type="submit" value="submit">Create Event and Log in with Spotify</button>
