--- a/authorization_code/public/pages/login.html
+++ b/authorization_code/public/pages/login.html
@@ -14,7 +14,7 @@
     <table id="example" class="display" style="width:100%">
         <thead>
             <tr>
-                <th>song_name</th>
+                <th>Song Name</th>
                 <th>song_artists</th>
                 <th>count</th>
                 <th>song_tempo</th>
